# piicleaner

./: .readthedocs.yaml  Cargo.toml  Makefile  README.md  demo.py  demo_polars_pii.py  pyproject.toml  test_polars.py  test_polars_namespace.py
.github/workflows/: ci.yml  publish.yml  release.yml  test-release.yml
docs/: conf.py
python/piicleaner/: __init__.py  _cleaner.py  _internal.pyi  _polars.py  _polars_plugin.py
src/: core.rs  lib.rs  patterns.rs
tests/: test_cleaner.py  test_edge_cases.py  test_patterns.rs  test_polars_integration.py  test_polars_namespace.py
