[package]
name = "piicleaner"
version = "0.1.0"
edition = "2021"

[lib]
name = "piicleaner"
crate-type = ["cdylib", "rlib"]

[dependencies]
polars = { version = "0.38", features = ["lazy"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
pyo3-polars = { version = "0.14", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.21"
